--- a/style.css
+++ b/style.css
@@ -4,3 +4,11 @@
     height: 300px;
     width: 400px;
 }
+
+.h3 { 
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/*.img.tableImage{ 
+  max-width: 20px;
+}*/
